--- a/projectsite/mini_store/templates/all_categories.html
+++ b/projectsite/mini_store/templates/all_categories.html
@@ -3,21 +3,13 @@
 {% block title %}All Categories - My Store{% endblock %}
 
 {% block content %}
-<div class="container">
     <h1>All Categories</h1>
-    <div class="row">
+    <ul>
         {% for category in categories %}
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title">{{ category.name }}</h5>
-                    <!-- You can add more details or links for each category here -->
-                </div>
-            </div>
-        </div>
+            <li><a href="{% url 'category_detail' category_id=category.id %}">{{ category.name }}</a></li>
+            <!-- Adjust the URL and display information as per your project's requirements -->
         {% empty %}
-        <p>No categories found.</p>
+            <li>No categories available</li>
         {% endfor %}
-    </div>
-</div>
+    </ul>
 {% endblock %}
